fix: working on mobile

--- a/styles.css
+++ b/styles.css
@@ -35,22 +35,22 @@ button {
   border-width: 0;
   border-radius: 8px;
   box-shadow: 0 0 0 var(--shadow);
-}
-
-button:hover, button:active {
-  top: -10px;
-  box-shadow: 0px 20px 14px var(--shadow);
-}
-
-button, .box {
   position: relative;
   top: 0px;
-  transition: all 0.2s linear;
+  transition: top 0.2s linear, box-shadow 0.2s linear;
+}
+
+button:hover,
+button:active {
+  top: -10px;
+  box-shadow: 0px 20px 14px var(--shadow);
 }
 
 .box {
   width: 40px;
   height: 40px;
+  padding: 5px;
+  box-sizing: border-box;
 }
 
 .box::after {
@@ -59,36 +59,30 @@ button, .box {
   background-color: var(--box-color, navy);
   content: "";
   display: block;
-  border-radius: 3px;
+  border-radius: 8px;
   box-shadow: 0 0 0 var(--shadow);
-  opacity: 0;
-  transition: box-shadow 0.2s linear, opacity 0.3s linear;
-  transform: translate(5px, 5px);
+  opacity: 0.1;
+  transition: box-shadow 0.2s linear, opacity 0.3s linear, top 0.2s linear;
+  position: relative;
+  top: 0px;
 }
 
-.sibling-2 {
+.box.sibling-2::after {
   top: -5px;
-}
-
-.sibling-2::after {
   box-shadow: 0 5px 3px var(--shadow);
   opacity: 0.3;
 }
 
-.sibling-1 {
-  top: -10px;
-}
-
-.sibling-1::after {
+.box.sibling-1::after {
+  top: -9px;
   box-shadow: 0 10px 7px var(--shadow);
-  opacity: 0.7;
+  opacity: 0.5;
 }
 
-.box:hover {
-  top: -20px;
-}
-
-.box:hover::after, .box:active::after {
+/* Cannot use :hover because it doesn't work on mobile, and 
+also it seems I cannot modify active element programatically */
+.box.hover::after {
+  top: -15px;
   box-shadow: 0px 20px 14px var(--shadow);
   opacity: 1;
 }
